--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -22,6 +22,11 @@
     column-gap: 1.8rem;
 }
 
+.about_name {
+    margin-bottom: 0.5rem;
+    color: var(--title-color);
+}
+
 .about_description {
     margin-bottom: 1.5rem;
     text-align: left;
