--- a/src/components/index/index.css
+++ b/src/components/index/index.css
@@ -182,7 +182,8 @@ img {
 .about,
 .services,
 .resume,
-.portfolio,
-.pricing {
+/* .portfolio, */
+.pricing,
+.testimonoals {
     display: none;
 }
